2019_lsp_project1/reference/ERROR/20190006/12_error.txt
/home/cyr/ds/2019_lsp_project1/project_source/STD_DIR/20190006/12.c: In function ‘ssu_thread_producer’:
/home/cyr/ds/2019_lsp_project1/project_source/STD_DIR/20190006/12.c:18:25: error: ‘cond2’ undeclared (first use in this function); did you mean ‘cond1’?
    pthread_cond_signal(&cond2);
                         ^~~~~
                         cond1
/home/cyr/ds/2019_lsp_project1/project_source/STD_DIR/20190006/12.c:18:25: note: each undeclared identifier is reported only once for each function it appears in
/home/cyr/ds/2019_lsp_project1/project_source/STD_DIR/20190006/12.c: In function ‘ssu_thread_consumer’:
/home/cyr/ds/2019_lsp_project1/project_source/STD_DIR/20190006/12.c:32:23: error: ‘cond2’ undeclared (first use in this function); did you mean ‘cond1’?
    pthread_cond_wait(&cond2,&mutex);
                       ^~~~~
                       cond1
/home/cyr/ds/2019_lsp_project1/project_source/STD_DIR/20190006/12.c: In function ‘main’:
/home/cyr/ds/2019_lsp_project1/project_source/STD_DIR/20190006/12.c:50:24: error: ‘cond2’ undeclared (first use in this function); did you mean ‘cond1’?
  pthread_cond_destroy(&cond2);
                        ^~~~~
                        cond1
